# Octopart

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
src/octopart/: __init__.py  __init__.pyi
src/utils/: __init__.py
tests/: test_simple.py
