[metadata]
name = octopart
version = attr: octopart.__version__
description = Reverse-engineered API for Octopart.
long_description = file: README.md
long_description_content_type = text/markdown
author = Matt Kaufman
url = https://github.com/mkaufman2023/Octopart
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests>=2.31.0
    PyJSONViewer>=1.6.0
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src